--- a/src/index.html
+++ b/src/index.html
@@ -30,16 +30,16 @@
       <nav class="header__menu menu">
         <ul class="menu__list">
           <li class="menu__item">
-            <a href="#" class="menu__link">Події</a>
+            <a href="#event" class="menu__link">Події</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link">Галерея</a>
+            <a href="#gallery" class="menu__link">Галерея</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link">Підписка</a>
+            <a href="#subscribe" class="menu__link">Підписка</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link">Контакти</a>
+            <a href="#contacts" class="menu__link">Контакти</a>
           </li>
         </ul>
       </nav>
@@ -47,7 +47,7 @@
     </header>
 
     <main>
-      <div class="current-events">
+      <div class="current-events" id="event">
         <h2 class="current-events__title">Актуальні події</h2>
         <section class="current-events__event event">
           <img
@@ -109,7 +109,7 @@
         </div>
       </div>
 
-      <div class="gallery">
+      <div class="gallery" id="gallery">
         <h2 class="gallery__title">Галерея</h2>
         <div class="gallery__pictures pictures">
           <img
@@ -153,7 +153,7 @@
         </div>
       </div>
 
-      <div class="subscribe">
+      <div class="subscribe" id="subscribe">
         <h2 class="subscribe__heading">Підписка</h2>
         <p class="subscribe__text">
           Бути в курсі всіх актуальних подій та останніх новин.
@@ -231,11 +231,13 @@
                 до закриття музею
               </p>
             </div>
-            <div class="information__contacts contacts">
+            <div class="information__contacts contacts" id="contacts">
               <h4 class="contacts__title">
                 Контакти:
               </h4>
-              вул. М. Грушевського, 6; Київ, 01001<br>
+              <a href="https://bit.ly/3cGKMwV" class="contacts__link">
+                вул. М. Грушевського, 6; Київ, 01001
+              </a> <br>
               <a href="tel:+38 (044) 278-13-57" class="contacts__link">
                 тел. +38 (044) 278-13-57
               </a>
