fixed pictures alt, menu

--- a/src/index.html
+++ b/src/index.html
@@ -30,25 +30,37 @@
       <nav class="header__menu menu">
         <ul class="menu__list">
           <li class="menu__item">
-            <a href="#event" class="menu__link">Події</a>
+            <a href="#event" class="menu__link">
+              Події
+            </a>
           </li>
           <li class="menu__item">
-            <a href="#gallery" class="menu__link">Галерея</a>
+            <a href="#gallery" class="menu__link">
+              Галерея
+            </a>
           </li>
           <li class="menu__item">
-            <a href="#subscribe" class="menu__link">Підписка</a>
+            <a href="#subscribe" class="menu__link">
+              Підписка
+            </a>
           </li>
           <li class="menu__item">
-            <a href="#contacts" class="menu__link">Контакти</a>
+            <a href="#contacts" class="menu__link">
+              Контакти
+            </a>
           </li>
         </ul>
       </nav>
-      <div class="header__events">ПОДІЇ</div>
+      <div class="header__events">
+        ПОДІЇ
+      </div>
     </header>
 
     <main>
       <div class="current-events" id="event">
-        <h2 class="current-events__title">Актуальні події</h2>
+        <h2 class="current-events__title">
+          Актуальні події
+        </h2>
         <section class="current-events__event event">
           <img
             src="/images/current-events/1.jpeg"
@@ -57,8 +69,12 @@
           >
           <div class="event__wrap">
             <div class="event__exhibition exhibition">
-              <h4 class="exhibition__title">ВИСТАВКА</h4>
-              <p class="exhibition__date">26.08-29.11.2019</p>
+              <h4 class="exhibition__title">
+                ВИСТАВКА
+              </h4>
+              <p class="exhibition__date">
+                26.08-29.11.2019
+              </p>
             </div>
             <div class="event__article article">
               <h3 class="article__title">
@@ -79,8 +95,12 @@
           >
           <div class="event__wrap">
             <div class="event__exhibition exhibition">
-              <h4 class="exhibition__title">ВИСТАВКА</h4>
-              <p class="exhibition__date">26.08-29.11.2019</p>
+              <h4 class="exhibition__title">
+                ВИСТАВКА
+              </h4>
+              <p class="exhibition__date">
+                26.08-29.11.2019
+              </p>
             </div>
             <div class="event__article article">
               <h3 class="article__title">
@@ -98,7 +118,9 @@
         <div class="romantism__background"></div>
         <div class="romantism__wrap">
           <div class="romantism__lection lection">
-            <h4 class="lection__title">ЛЕКЦІЯ</h4>
+            <h4 class="lection__title">
+              ЛЕКЦІЯ
+            </h4>
             <p class="lection__date">
               26/08/2019 - 11:00
             </p>
@@ -110,38 +132,40 @@
       </div>
 
       <div class="gallery" id="gallery">
-        <h2 class="gallery__title">Галерея</h2>
+        <h2 class="gallery__title">
+          Галерея
+        </h2>
         <div class="gallery__pictures pictures">
           <img
           src="\images\gallery\1.jpeg"
-          alt="picture"
+          alt="Дівчина в українському вбранні"
           class="pictures__img"
         >
           <img
             src="\images\gallery\2.jpg"
-            alt="picture"
+            alt="Засніжене село"
             class="pictures__img"
           >
           <img
             src="\images\gallery\3.jpg"
-            alt="picture"
+            alt="Гусаки на прогулянці"
             class="pictures__img pictures__img--hide"
           >
         </div>
         <div class="gallery__pictures pictures pictures--second-line">
           <img
           src="\images\gallery\4.jpg"
-          alt="picture"
+          alt="Дівчина на лавці"
           class="pictures__img"
         >
           <img
             src="\images\gallery\5.jpg"
-            alt="picture"
+            alt="Морський пейзаж"
             class="pictures__img"
           >
           <img
             src="\images\gallery\6.jpg"
-            alt="picture"
+            alt="Натовп людей"
             class="pictures__img pictures__img--hide"
           >
         </div>
@@ -154,7 +178,9 @@
       </div>
 
       <div class="subscribe" id="subscribe">
-        <h2 class="subscribe__heading">Підписка</h2>
+        <h2 class="subscribe__heading">
+          Підписка
+        </h2>
         <p class="subscribe__text">
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
@@ -168,7 +194,7 @@
             placeholder="E-mail"
             class="form__input"
           >
-          <button class="form__button"><img src="/images/vector.svg" alt="picture"></button>
+          <button class="form__button"><img src="/images/vector.svg" alt="button img"></button>
         </form>
       </div>
     </main>
@@ -180,12 +206,14 @@
           <div class="media__links links">
             <a href="#" class="links__item">
               <img
-              src="/images/media-icons/facebook.svg" alt="facebook"
+              src="/images/media-icons/facebook.svg"
+              alt="facebook"
               >
             </a>
             <a href="#" class="links__item">
               <img
-              src="/images/media-icons/instagram.svg" alt="instagram"
+              src="/images/media-icons/instagram.svg"
+              alt="instagram"
               >
             </a>
           </div>
@@ -194,7 +222,9 @@
         <div class="footer__wrap">
           <div class="footer__information information">
             <div class="information__timetable timetable">
-              <h4 class="timetable__title">Графік роботи</h4>
+              <h4 class="timetable__title">
+                Графік роботи
+              </h4>
               <p class="timetable__time">
                 <span class="timetable__time--bold">
                   12:00 — 20:00
