--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,127 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
     <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+
+      <div class="header__hamburger hamburger">
+        <div class="hamburger__button"></div>
+        <nav class="hamburger__nav nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="link nav__link">Галерея</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="link nav__link">Виставки та події</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="link nav__link">Відвідування</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="link nav__link">Стати нашим другом</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="link nav__link">Про Нас</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="link nav__link">Магазин</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="link nav__link">Блог</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="link nav__link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="header__logo logo">NA<br>MU</div>
+      <div class="header__button"></div>
+
+      <div class="header__container">
+
+        <img class="image header__image"
+          src="./images/photos/1.png"
+          alt="todo"
+          srcset="./images/photos/1_2x.png 2x"
+        >
+        <div class="header__component">
+          <h1 class="header__title">
+            ХУДОЖ<span class="header__title-span">НІЙ</span><br>
+            МУЗЕЙ
+          </h1>
+          <a
+            class="header__arrow-button arrow-button"
+            href="#"
+          >
+          Квитки
+          </a>
+        </div>
+
+        <div class="header__events">Події
+        </div>
+
+      </div>
+
+    </header>
+
+    <main class="container">
+
+      <div class="section">
+        <h2 class="section__title">Актуальні події</h2>
+        <div class="event event--left">
+          <img class="image event__image"
+            src="./images/photos/events/2.png"
+            alt="MDN logo"
+            srcset="./images/photos/events/2_2x.png 2x"
+          >
+          <div class="event__title">
+            <p class="event__type">ВИСТАВКА</p>
+            <p class="event_date">26.08-29.11.2019</p>
+            <h3>Йду і повертаюсь</h3>
+            <p class="event__content">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </p>
+          </div>
+
+        </div>
+
+        <div class="event event--right">
+          <img class="image event__image"
+            src="./images/photos/events/3.png"
+            alt="MDN logo"
+            srcset="./images/photos/events/3_2x.png 2x"
+          >
+          <div class="event__title">
+            <p class="event__type">ВИСТАВКА</p>
+            <p class="event_date">26.08-29.11.2019</p>
+            <h3>І спогади, і мрії</h3>
+            <p class="event__content">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+
+        </div>
+
+      </div>
+
+      <img class="image container__image"
+        src="./images/photos/background/4.png"
+        alt="MDN logo"
+      >
+    </main>
+    <footer class="footer">
+
+    </footer>
   </body>
-</html>
+</html
+>
