--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <script type="text/javascript" src="scripts/main.js"></script>
-    <header class="header">
+    <header class="header header--margin">
 
       <div class="header__hamburger hamburger">
         <div class="hamburger__button"></div>
@@ -78,7 +78,7 @@
 
     <main class="container">
 
-      <div class="section">
+      <div class="section section--margin">
         <h2 class="section__title">Актуальні події</h2>
         <div class="event event--left">
           <img class="image event__image"
@@ -86,10 +86,13 @@
             alt="MDN logo"
             srcset="./images/photos/events/2_2x.png 2x"
           >
-          <div class="event__title">
-            <p class="event__type">ВИСТАВКА</p>
-            <p class="event_date">26.08-29.11.2019</p>
-            <h3>Йду і повертаюсь</h3>
+          <div class="event__padding"></div>
+          <div class="event__description">
+            <div class="event__details">
+              <p class="event__type">ВИСТАВКА</p>
+              <p class="event__date">26.08-29.11.2019</p>
+            </div>
+            <h3 class="event__title">Йду і повертаюсь</h3>
             <p class="event__content">
               Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
             </p>
@@ -103,10 +106,13 @@
             alt="MDN logo"
             srcset="./images/photos/events/3_2x.png 2x"
           >
-          <div class="event__title">
-            <p class="event__type">ВИСТАВКА</p>
-            <p class="event_date">26.08-29.11.2019</p>
-            <h3>І спогади, і мрії</h3>
+          <div class="event__padding"></div>
+          <div class="event__description">
+            <div class="event__details">
+              <p class="event__type">ВИСТАВКА</p>
+              <p class="event__date">26.08-29.11.2019</p>
+            </div>
+            <h3 class="event__title">І спогади, і мрії</h3>
             <p class="event__content">
               Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
             </p>
