--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,148 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="./styles/index.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__top container">
+        <div class="burger-memu container ">
+          <span class="burger-memu__line"></span>
+        </div>
+        <h2 class="header__logo">na mu</h2>
+        <a href="#event" class="header__event">події</a>
+      </div>
+      <div class="header__backgraund">
+        <div class="header__title ">
+          <h1 class="header__heading">
+            худож<span class="header__heading--transparent">ній</span> музей
+          </h1>
+          <a href="#" class="header__link">квитки
+          </a>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="section">
+        <h2 class="section__header container" id="event">Актуальні події</h2>
+        <div class="event container">
+          <img
+            class="event__img"
+            src="../src/images/Art/Trees art.png"
+            alt="ukraine pomantic art"
+          >
+          <div class="event__discribe">
+            <div class="event__exhibition exhibition">
+              <h4 class="exhibition__name">виставка</h4>
+              <span class="exhibition__date">26.08-29.11.2019</span>
+            </div>
+            <div class="event__article article">
+              <h3 class="article__header article__header--red">Йду і повертаюсь </h3>
+              <p class="article__text">
+                Національний Художній Музей України презентує унікальну частину колекції
+                Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="event event--left container">
+          <img
+            class="event__img"
+            src="../src/images/Art/Women art.png"
+            alt="ukraine pomantic art"
+          >
+          <div class="event__discribe event__discribe--left ">
+            <div class="event__exhibition exhibition">
+              <h4 class="exhibition__name">виставка</h4>
+              <span class="exhibition__date">26.08-29.11.2019</span>
+            </div>
+            <div class="event__article article">
+              <h3 class="article__header article__header--red">І спогади і мрії</h3>
+              <p class="article__text">
+                Національний художній музей України до 100 річчя від дня народження видатної української художниці
+                Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section section-romantism">
+        <div class="section-romantism__art">
+          <div class="section-romantism__title">
+            <div class="exhibition exhibition--romantic">
+              <h4 class="exhibition__name">лекція</h4>
+              <span class="exhibition__date">26.08-29.11.2019</span>
+            </div>
+            <h3 class="article__header article__header--romantism">Від класицизму до<br>романтизму</h3>
+          </div>
+        </div>
+      </section>
+      <section class="section">
+        <h2 class="section__header section__header--gallery container ">галерея</h2>
+        <div class="gallery container">
+          <div class="gallery__art">
+            <div class="gallery__art--first-line">
+              <img
+                src="images/Gallery/womens.png"
+                alt="Жінка у вишиванці"
+                class="gallery__img"
+              >
+              <img
+                src="images/Gallery/house.png"
+                alt="Засніжені хати"
+                class="gallery__img"
+              >
+              <img
+                src="images/Gallery/gues.png"
+                alt="Гуси на прогулянці"
+                class="gallery__img gallery__img--hide"
+              >
+            </div>
+            <div class="gallery__art--second-line">
+              <img
+                src="images/Gallery/park.png"
+                alt="Жінка на ловочці в парку"
+                class="gallery__img gallery__img-small"
+              >
+              <img
+                src="images/Gallery/sea.png"
+                alt="Пейзаж моря"
+                class="gallery__img gallery__img-small"
+                >
+              <img
+                src="images/Gallery/cossacs.png"
+                alt="Козак розповідає історії"
+                class="gallery__img gallery__img-small gallery__img--hide"
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="sectipn section-subscription">
+        <div class="section-subscription__art">
+          <h2 class="section-subscription__header">підписка</h2>
+          <p class="section-subscription__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form class="form" method="GET">
+            <label for="form-email">
+              <input
+                type="email"
+                class="form__input"
+                id="form-email"
+                placeholder="email"
+                required
+              >
+            </label>
+            <input
+              type="submit"
+              class="form__button"
+              value="."
+            >
+          </form>
+        </div>
+      </section>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
