--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
 
         <img class="image header__image"
           src="./images/photos/1.png"
-          alt="todo"
+          alt="Фото музею"
           srcset="./images/photos/1_2x.png 2x"
         >
         <div class="header__component">
@@ -76,56 +76,73 @@
 
     </header>
 
-    <main class="container">
+    <main >
 
-      <div class="section section--margin">
-        <h2 class="section__title">Актуальні події</h2>
-        <div class="event event--left">
-          <img class="image event__image"
-            src="./images/photos/events/2.png"
-            alt="MDN logo"
-            srcset="./images/photos/events/2_2x.png 2x"
-          >
-          <div class="event__padding"></div>
-          <div class="event__description">
-            <div class="event__details">
-              <p class="event__type">ВИСТАВКА</p>
-              <p class="event__date">26.08-29.11.2019</p>
+      <div class="centered">
+        <section class="section section--margin">
+          <h2 class="section__title">Актуальні події</h2>
+          <div class="event event--left">
+            <img class="image event__image"
+              src="./images/photos/events/2.png"
+              alt="ВИСТАВКА Йду і повертаюсь"
+              srcset="./images/photos/events/2_2x.png 2x"
+            >
+            <div class="event__padding"></div>
+            <div class="event__description description">
+              <div class="description__details">
+                <p class="description__type">ВИСТАВКА</p>
+                <p class="description__date">26.08-29.11.2019</p>
+              </div>
+              <h3 class="description__title">Йду і повертаюсь</h3>
+              <p class="description__content">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
             </div>
-            <h3 class="event__title">Йду і повертаюсь</h3>
-            <p class="event__content">
-              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-            </p>
           </div>
-
-        </div>
-
-        <div class="event event--right">
-          <img class="image event__image"
-            src="./images/photos/events/3.png"
-            alt="MDN logo"
-            srcset="./images/photos/events/3_2x.png 2x"
-          >
-          <div class="event__padding"></div>
-          <div class="event__description">
-            <div class="event__details">
-              <p class="event__type">ВИСТАВКА</p>
-              <p class="event__date">26.08-29.11.2019</p>
+          <div class="event event--right">
+            <img class="image event__image"
+              src="./images/photos/events/3.png"
+              alt="ВИСТАВКА І спогади, і мрії"
+              srcset="./images/photos/events/3_2x.png 2x"
+            >
+            <div class="event__padding"></div>
+            <div class="event__description description">
+              <div class="description__details">
+                <p class="description__type">ВИСТАВКА</p>
+                <p class="description__date">26.08-29.11.2019</p>
+              </div>
+              <h3 class="description__title">І спогади, і мрії</h3>
+              <p class="description__content">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
             </div>
-            <h3 class="event__title">І спогади, і мрії</h3>
-            <p class="event__content">
-              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-            </p>
           </div>
+        </section>
+        <section class="section section--margin lection">
 
-        </div>
+          <img class="image lection__image"
+            src="./images/photos/background/4.png"
+            alt="Лекція Від класицизму до романтизму"
+          >
+          <div class="lection__rectangle">
+            <div class="description">
+              <div class="description__details description__details--stretched">
+                <p class="description__type">ЛЕКЦІЯ</p>
+                <p class="description__date">26/08/2019 - 11:00</p>
+              </div>
+              <h3 class="description__title">Від класицизму до романтизму</h3>
+            </div>
+          </div>
+        </section>
+
+        <section class="section section--margin gallery">
+        </section>
+
+        <section class="section section--margin subscribe">
+        </section>
 
       </div>
 
-      <img class="image container__image"
-        src="./images/photos/background/4.png"
-        alt="MDN logo"
-      >
     </main>
     <footer class="footer">
 
