--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,159 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>Museum</title>
+    <link rel="icon" href="./images/Logo.png">
+    <link rel="stylesheet" href="./styles/index.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Ubuntu:wght@700&family=Oswald:wght@200;300;400;500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
     <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <nav class="nav header__nav">
+        <input
+          type="checkbox"
+          name="toogler"
+          id="nav-toogler"
+          class="nav__toogler"
+        >
+        <label for="nav-toogler" class="nav__toogler-label-open">
+          <img src="./images/Burger.svg" alt="burger-logo">
+        </label>
+        <label for="nav-toogler" class="nav__toogler-label-close">
+          <img src="./images/Logo.png" alt="burger-logo">
+        </label>
+        <div class="menu nav__menu">
+          <ul class="menu__list">
+            <li class="menu__item"><a href="" class="menu__link">Галерея</a></li>
+            <li class="menu__item"><a href="" class="menu__link">Виставки та події</a></li>
+            <li class="menu__item"><a href="" class="menu__link">Відвідування</a></li>
+            <li class="menu__item"><a href="" class="menu__link">Стати нашим другом</a></li>
+            <li class="menu__item"><a href="" class="menu__link">Про Нас</a></li>
+            <li class="menu__item"><a href="" class="menu__link">Магазин</a></li>
+            <li class="menu__item"><a href="" class="menu__link">Блог</a></li>
+            <li class="menu__item"><a href="" class="menu__link">Контакти</a></li>
+          </ul>
+          <label for="menu__search" class="menu__search-logo">
+            <img src="./images/Search.svg" alt="search-logo">
+          </label>
+          <input
+            type="search"
+            name="search"
+            id="menu__search"
+            class="menu__search"
+          >
+        </div>
+        <img
+          src="./images/Logo.png"
+          alt="logo"
+          class="nav__logo"
+        >
+      </nav>
+    </header>
+
+    <main class="main">
+      <section class="main__section art-museum">
+        <p class="art-museum__event">події</p>
+
+        <div class="art-museum__wrapper">
+          <h1 class="art-museum__heading">худож<span class="art-museum__letters">ній</span> музей</h1>
+          <button class="art-museum__button">
+            <span class="art-museum__ticets">Квитки</span>
+            <span class="art-museum__pointer"><img src="./images/pointer.svg" alt="pointer"></span>
+          </button>
+        </div>
+
+        <div class="art-museum__img-container"></div>
+      </section>
+
+      <section class="main__section actual-event">
+        <h2 class="actual-event__title">Актуальні події</h2>
+        <div class="actual-event__wrapper">
+          <div class="actual-event__img">
+            <img src="./images/Photo_1.jpg" alt="photo">
+          </div>
+          <div class="actual-event__info">
+            <h3 class="actual-event__subtitle">
+              виставка<span class="actual-event__date">26.08-29.11.2019</span>
+            </h3>
+            <h4 class="actual-event__name">Йду і повертаюсь</h4>
+            <p class="actual-event__description">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини<br>1980-1995 років.
+            </p>
+          </div>
+        </div>
+        <div class="actual-event__wrapper actual-event__wrapper--second">
+          <div class="actual-event__info">
+            <h3 class="actual-event__subtitle">
+              виставка<span class="actual-event__date">26.08-29.11.2019</span>
+            </h3>
+            <h4 class="actual-event__name">І спогади і мрії</h4>
+            <p class="actual-event__description">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+          <div class="actual-event__img">
+            <img src="./images/Photo_2.jpg" alt="photo">
+          </div>
+        </div>
+      </section>
+      <section class="main__section classicism">
+        <div class="classicism__info">
+          <h3 class="classicism__subtitle">
+            лекція<span class="classicism__date">26/08/2019 - 11:00</span>
+          </h3>
+          <h4 class="classicism__name">Від класицизму до романтизму</h4>
+        </div>
+      </section>
+      <section class="main__section gallery">
+        <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__album">
+          <div class="gallery__img">
+            <img src="./images/img_1.jpg" alt="">
+          </div>
+          <div class="gallery__img">
+            <img src="./images/img_2.jpg" alt="">
+          </div>
+          <div class="gallery__img">
+            <img src="./images/img_3.jpg" alt="">
+          </div>
+          <div class="gallery__img">
+            <img src="./images/img_4.jpg" alt="">
+          </div>
+          <div class="gallery__img">
+            <img src="./images/img_5.jpg" alt="">
+          </div>
+          <div class="gallery__img">
+            <img src="./images/img_6.jpg" alt="">
+          </div>
+        </div>
+      </section>
+      <section class="main__section subscription">
+        <div class="subscription__wrapper">
+          <h2 class="subscription__title">Підписка</h2>
+          <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <form
+            class="subscription__form"
+            action="#"
+            method="post"
+          >
+            <input
+              class="subscription__input"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              required
+            >
+            <button type="submit" class="subscription__button">
+              <img src="./images/pointer_2.svg" alt="pointer">
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+
+    <footer class="footer"></footer>
   </body>
 </html>
