Added events, gallery and subscription blocks

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,391 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="page-header header">
+      <div class="header__container container">
+      </div>
+    </header>
+    <main class="page-main">
+      <section class="page-main__events events" id="events">
+        <div class="events__container container">
+          <h2 class="events__title">
+          Актуальні події
+          </h2>
+          <article class="events__item event">
+            <div class="event__wrapper event__wrapper--left">
+              <a href="#" class="event__photo event__photo--left">
+                <picture>
+                  <source
+                    media="(min-width: 1920px)"
+                    srcset="images/event1-dt-lg.jpg"
+                  >
+                  <source
+                    media="(min-width: 1280px)"
+                    srcset="images/event1-dt.jpg"
+                  >
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="images/event1-tb.jpg"
+                  >
+                  <img
+                    class="event__img"
+                    src="images/event1-mb.jpg"
+                    alt="Фотография события"
+                    >
+                </picture>
+              </a>
+              <div class="event__info event__info--left">
+                <div class="event__box">
+                  <p class="event__type">Виставка</p>
+                  <p class="event__date">26.08 - 29.11.2019</p>
+                </div>
+                <h3 class="event__title">
+                  <a href="" class="event__link event__link--exhibition">
+                    Йду і повертаюсь
+                  </a>
+                </h3>
+                <p class="event__text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980&nbsp;-&nbsp;1995 років.
+                </p>
+              </div>
+            </div>
+          </article>
+          <article class="events__item event">
+            <div class="event__wrapper event__wrapper--right">
+              <a href="#" class="event__photo event__photo--right">
+                <picture>
+                  <source
+                    media="(min-width: 1920px)"
+                    srcset="images/event2-dt-lg.jpg"
+                  >
+                  <source
+                    media="(min-width: 1280px)"
+                    srcset="images/event2-dt.jpg"
+                  >
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="images/event2-tb.jpg"
+                  >
+                  <img
+                    class="event__img"
+                    src="images/event2-mb.jpg"
+                    alt="Фотография события"
+                    >
+                </picture>
+              </a>
+              <div class="event__info event__info--right">
+                <div class="event__box">
+                  <p class="event__type">Виставка</p>
+                  <p class="event__date">26.08 - 29.11.2019</p>
+                </div>
+                <h3 class="event__title">
+                  <a href="" class="event__link event__link--exhibition">
+                    І спогади і мрії
+                  </a>
+                </h3>
+                <p class="event__text">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+        <article class="events__item events__item--lecture event1-dt-lg">
+          <a href="#" class="event__photo event__photo--lecture">
+            <picture>
+              <source
+                media="(min-width: 1920px)"
+                srcset="images/event3-dt-lg.jpg"
+              >
+              <source
+                media="(min-width: 1280px)"
+                srcset="images/event3-dt.jpg"
+              >
+              <source
+                media="(min-width: 768px)"
+                srcset="images/event3-tb.jpg"
+              >
+              <img
+                class="event__img"
+                src="images/event3-mb.jpg"
+                alt="Фотография события"
+                >
+            </picture>
+          </a>
+          <div class="event__info event__info--lecture">
+            <div class="event__box event__box--lecture">
+              <p class="event__type">Лекція</p>
+              <p class="event__date">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="event__title">
+              <a href="" class="event__link">
+                Від класицизму до романтизму
+              </a>
+            </h3>
+          </div>
+        </article>
+      </section>
+      <section class="page-main__gallery gallery" id="gallery">
+        <div class="gallery__container container">
+          <h2 class="gallery__title">
+            Галерея
+          </h2>
+          <div class="gallery__wrapper">
+            <img
+            class="gallery__img"
+            src="images/gallery1-dt.jpg"
+            alt="Фото с галлереи"
+            >
+            <img
+            class="gallery__img"
+            src="images/gallery2-dt.jpg"
+            alt="Фото с галлереи"
+            >
+            <img
+            class="gallery__img"
+            src="images/gallery3-dt.jpg"
+            alt="Фото с галлереи"
+            >
+            <img
+            class="gallery__img"
+            src="images/gallery4-dt.jpg"
+            alt="Фото с галлереи"
+            >
+            <img
+            class="gallery__img"
+            src="images/gallery5-dt.jpg"
+            alt="Фото с галлереи"
+            >
+            <img
+            class="gallery__img"
+            src="images/gallery6-dt.jpg"
+            alt="Фото с галлереи"
+            >
+          </div>
+        </div>
+      </section>
+      <section class="page-main__subscription subscription" id="subscription">
+        <div class="subscription__container container">
+          <h2 class="subscription__title">
+            Підписка
+          </h2>
+          <p class="subscription__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form
+            class="subscription__form form"
+            method="POST"
+            name="subscription"
+            action="#"
+          >
+            <label class="visually-hidden"
+              for="email"
+            >
+            </label>
+            <input
+              class="form__input"
+              type="email"
+              id="email"
+              name="email"
+              placeholder="E-mail"
+              required
+              autofocus
+            >
+            <input
+              class="form__btn"
+              type="submit"
+              name="submit"
+              value=""
+            >
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer class="page-footer footer">
+      <div class="footer__container container">
+        <div class="footer__box">
+          <a href="#home" class="footer__logo logo">
+            <img
+              class="logo__img"
+              src="images/logo.svg"
+              alt="Логотип Художнього музею"
+              width="63"
+              height="72"
+            >
+          </a>
+          <div class="footer__socials socials">
+            <ul class="socials__list">
+              <li class="socials__item">
+                <a target="_blank"
+                  rel="noopener"
+                  class="socials__link"
+                  href="#"
+                >
+                  <img
+                    class="socials__img"
+                    src="images/fb-icon.svg"
+                    alt="Художній музей на Facebook"
+                    width="24"
+                    height="24"
+                  >
+                </a>
+              </li>
+              <li class="socials__item">
+                <a target="_blank"
+                  rel="noopener"
+                  class="socials__link"
+                  href="#"
+                >
+                  <img
+                    class="socials__img"
+                    src="images/insta-icon.svg"
+                    alt="Художній музей в Instagram"
+                    width="24"
+                    height="24"
+                  >
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__wrapper">
+          <div class="footer__info info">
+            <div class="info__schedule schedule">
+              <h3 class="schedule__title">
+                Графік роботи
+              </h3>
+              <ul class="schedule__list">
+                <li class="schedule__item">
+                  <span class="schedule__time">12:00 — 20:00 </span>середа
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule__time">12:00 — 20:00 </span> четвер
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule__time">12:00 — 20:00 </span>п’ятниця
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule__time">11:00 — 19:00 </span>субота
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule__time">11:00 — 19:00</span>неділя
+                </li>
+              </ul>
+              <div class="schedule__text">
+                Вихідні понеділок, вівторок
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </div>
+            </div>
+            <div class="info__contacts contacts">
+              <h3 class="contacts__title">
+                Контакти:
+              </h3>
+              <div class="contacts__text">
+                вул. М. Грушевського, 6; Київ, 01001
+                тел. +38 (044) 278-13-57
+                факс +38 (044) 278-74-54
+                e-mail: info@namu.kiev.ua
+              </div>
+            </div>
+          </div>
+          <div class="footer__info info">
+            <ul class="info__list">
+              <li class="info__item">
+                <a href="#"
+                  class="info__link"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="info__item">
+                <a href="#"
+                  class="info__link"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  Виставки та події
+                </a>
+              </li>
+              <li class="info__item">
+                <a href="#"
+                  class="info__link"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  Відвідування
+                </a>
+              </li>
+              <li class="info__item">
+                <a href="#"
+                  class="info__link"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  Стати нашим другом
+                </a>
+              </li>
+            </ul>
+            <ul class="info__list">
+              <li class="info__item">
+                <a href="#"
+                  class="info__link"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="info__item">
+                <a href="#"
+                  class="info__link"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  Магазин
+                </a>
+              </li>
+              <li class="info__item">
+                <a href="#"
+                  class="info__link"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  Блог
+                </a>
+              </li>
+              <li class="info__item">
+                <a href="#"
+                  class="info__link"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__copyright copyright">
+          <p class="copyright__text">
+            Designed by Zhyriada Marina
+          </p>
+          <p class="copyright__text">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
