--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__container container">
+        <div class="header__img">
+          <img src="./images/header-muzej-1800x1200.png" alt="muzej">
+        </div>
+      </div>
+    </header>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
