Added subscribe section

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
     <main >
 
       <div class="centered">
-        <section class="section section--margin">
+        <section class="section">
           <h2 class="section__title">Актуальні події</h2>
           <div class="event event--left">
             <img class="image event__image"
@@ -118,10 +118,10 @@
             </div>
           </div>
         </section>
-        <section class="section section--margin lection">
+        <section class="lection">
 
           <img class="image lection__image"
-            src="./images/photos/background/4.png"
+            src="./images/photos/background/1.png"
             alt="Лекція Від класицизму до романтизму"
           >
           <div class="lection__rectangle">
@@ -135,10 +135,27 @@
           </div>
         </section>
 
-        <section class="section section--margin gallery">
+        <section class="section">
+          <h2 class="section__title">Галерея</h2>
+
         </section>
 
-        <section class="section section--margin subscribe">
+        <section class="subscribe">
+          <h2 class="subscribe__title">Підписка</h2>
+          <p class="subscribe__details">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <form action="POST" class="subscribe__form">
+            <input
+              type="text"
+              class="subscribe__email"
+              placeholder="Email"
+              required
+            >
+            <input
+              type="submit"
+              class="subscribe__submit"
+              value=">"
+            >
+          </form>
         </section>
 
       </div>
