footer was added

--- a/src/index.html
+++ b/src/index.html
@@ -27,14 +27,14 @@
         </label>
         <div class="menu nav__menu">
           <ul class="menu__list">
-            <li class="menu__item"><a href="" class="menu__link">Галерея</a></li>
-            <li class="menu__item"><a href="" class="menu__link">Виставки та події</a></li>
-            <li class="menu__item"><a href="" class="menu__link">Відвідування</a></li>
-            <li class="menu__item"><a href="" class="menu__link">Стати нашим другом</a></li>
-            <li class="menu__item"><a href="" class="menu__link">Про Нас</a></li>
-            <li class="menu__item"><a href="" class="menu__link">Магазин</a></li>
-            <li class="menu__item"><a href="" class="menu__link">Блог</a></li>
-            <li class="menu__item"><a href="" class="menu__link">Контакти</a></li>
+            <li class="menu__item"><a href="#" class="menu__link">Галерея</a></li>
+            <li class="menu__item"><a href="#" class="menu__link">Виставки та події</a></li>
+            <li class="menu__item"><a href="#" class="menu__link">Відвідування</a></li>
+            <li class="menu__item"><a href="#" class="menu__link">Стати нашим другом</a></li>
+            <li class="menu__item"><a href="#" class="menu__link">Про Нас</a></li>
+            <li class="menu__item"><a href="#" class="menu__link">Магазин</a></li>
+            <li class="menu__item"><a href="#" class="menu__link">Блог</a></li>
+            <li class="menu__item"><a href="#" class="menu__link">Контакти</a></li>
           </ul>
           <label for="menu__search" class="menu__search-logo">
             <img src="./images/Search.svg" alt="search-logo">
@@ -100,6 +100,9 @@
           </div>
         </div>
       </section>
+
+      <div class="main__classicism-background"></div>
+
       <section class="main__section classicism">
         <div class="classicism__info">
           <h3 class="classicism__subtitle">
@@ -108,6 +111,7 @@
           <h4 class="classicism__name">Від класицизму до романтизму</h4>
         </div>
       </section>
+
       <section class="main__section gallery">
         <h2 class="gallery__title">Галерея</h2>
         <div class="gallery__album">
@@ -131,31 +135,80 @@
           </div>
         </div>
       </section>
-      <section class="main__section subscription">
-        <div class="subscription__wrapper">
-          <h2 class="subscription__title">Підписка</h2>
-          <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
-          <form
-            class="subscription__form"
-            action="#"
-            method="post"
-          >
-            <input
-              class="subscription__input"
-              type="email"
-              name="email"
-              placeholder="E-mail"
-              required
+
+      <div class="main__subscription-background">
+        <section class="main__section subscription">
+          <div class="subscription__wrapper">
+            <h2 class="subscription__title">Підписка</h2>
+            <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+            <form
+              class="subscription__form"
+              action="#"
+              method="post"
             >
-            <button type="submit" class="subscription__button">
-              <img src="./images/pointer_2.svg" alt="pointer">
-            </button>
-          </form>
-        </div>
-      </section>
+              <input
+                class="subscription__input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                required
+              >
+              <button type="submit" class="subscription__button">
+                <img src="./images/pointer_2.svg" alt="pointer">
+              </button>
+            </form>
+          </div>
+        </section>
+      </div>
     </main>
 
+    <footer class="footer">
+      <div class="footer__top">
+        <!-- <div class="footer__social-media">
+          <div class="footer__logo"></div>
+          <div class="footer__facebook-logo"></div>
+          <div class="footer__instagram-logo"></div>
+        </div> -->
 
-    <footer class="footer"></footer>
+        <div class="footer__timetable timetable">
+          <h3 class="timetable__title">Графік роботи</h3>
+          <ul class="timetable__schedule">
+            <li class="timetable__time"><span class="timetable__style">12:00 — 20:00</span> середа</li>
+            <li class="timetable__time"><span class="timetable__style">12:00 — 20:00</span> четвер</li>
+            <li class="timetable__time"><span class="timetable__style">12:00 — 20:00</span> п’ятниця</li>
+            <li class="timetable__time"><span class="timetable__style">11:00 — 19:00</span> субота</li>
+            <li class="timetable__time"><span class="timetable__style">11:00 — 19:00</span> неділя</li>
+          </ul>
+          <p class="timetable__text">Вихідні понеділок, вівторок<br>Каса припиняє роботу за 1 годину до&nbsp; закриття музею</p>
+        </div>
+
+        <div class="footer__contacts contacts">
+          <h3 class="contacts__title">Контакти:</h3>
+          <p class="contacts__info">вул. М. Грушевського, 6; Київ, 01001 тел.&nbsp;+38&nbsp;(044)&nbsp;278-13-57 факс&nbsp;+38&nbsp;(044)&nbsp;278-74-54 e-mail:&nbsp;info@namu.kiev.ua</p>
+        </div>
+
+        <div class="footer__separator"></div>
+
+        <ul class="footer__list">
+          <li class="footer__item"><a href="#" class="footer__link">Галерея</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Виставки та події</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Відвідування</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Стати нашим другом</a></li>
+        </ul>
+
+        <ul class="footer__list">
+          <li class="footer__item"><a href="#" class="footer__link">Про Нас</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Магазин</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Блог</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Контакти</a></li>
+        </ul>
+      </div>
+
+      <div class="footer__bottom">
+        <div class="footer__copytight">Copyright © 2019. All Rights Reserved.</div>
+        <div class="footer__design">Designed by Zhyriada Marina</div>
+      </div>
+
+    </footer>
   </body>
 </html>
