without mobile menu and gallery

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,47 @@
   <body>
     <header class="header">
       <div class="header__top container">
-        <div class="burger-memu container ">
+        <div class="burger-memu container">
           <span class="burger-memu__line"></span>
         </div>
-        <h2 class="header__logo">na mu</h2>
+        <h2 class="header__logo ">na mu</h2>
         <a href="#event" class="header__event">події</a>
+        <nav class="header-nav container">
+          <h2 class="header-nav__logo">na mu</h2>
+          <ul class="header-nav__list">
+            <li class="header-nav__item">
+              <a href="#gallery" class="header-nav__link">Гелерея</a>
+            </li>
+            <li class="header-nav__item">
+              <a href="#event" class="header-nav__link">Виставки та події</a>
+            </li>
+            <li class="header-nav__item">
+              <a href="#art" class="header-nav__link">Відвідування</a>
+            </li>
+            <li class="header-nav__item">
+              <a href="#subscription" class="header-nav__link">Стати нашим другом</a>
+            </li>
+            <li class="header-nav__item">
+              <a href="" class="header-nav__link">Про Нас</a>
+            </li>
+            <li class="header-nav__item">
+              <a href="#" class="header-nav__link">Магазин</a>
+            </li>
+            <li class="header-nav__item">
+              <a href="#" class="header-nav__link">Блог</a>
+            </li>
+            <li class="header-nav__item">
+              <a href="#info" class="header-nav__link">Контакти</a>
+            </li>
+          </ul>
+          <div class="header-nav__search">
+            <img
+              src="images/search.png"
+              class="header-nav__search-img"
+              alt="Іконка пошуку"
+            >
+          </div>
+        </nav>
       </div>
       <div class="header__backgraund">
         <div class="header__title ">
@@ -27,7 +63,7 @@
     </header>
     <main>
       <section class="section">
-        <h2 class="section__header container" id="event">Актуальні події</h2>
+        <h2 class="section__header container section__header--kost" id="event">Актуальні події</h2>
         <div class="event container">
           <img
             class="event__img"
@@ -70,7 +106,7 @@
         </div>
       </section>
       <section class="section section-romantism">
-        <div class="section-romantism__art">
+        <div class="section-romantism__art" id="art">
           <div class="section-romantism__title">
             <div class="exhibition exhibition--romantic">
               <h4 class="exhibition__name">лекція</h4>
@@ -82,7 +118,7 @@
       </section>
       <section class="section">
         <h2 class="section__header section__header--gallery container ">галерея</h2>
-        <div class="gallery container">
+        <div class="gallery container" id="gallery">
           <div class="gallery__art">
             <div class="gallery__art--first-line">
               <img
@@ -122,7 +158,7 @@
         </div>
       </section>
       <section class="sectipn section-subscription">
-        <div class="section-subscription__art">
+        <div class="section-subscription__art" id="subscription">
           <h2 class="section-subscription__header">підписка</h2>
           <p class="section-subscription__text">
             Бути в курсі всіх актуальних подій та останніх новин.
@@ -146,6 +182,100 @@
         </div>
       </section>
     </main>
+    <footer class="footer container">
+      <div class="footer--main">
+        <div class="general-info" id="info">
+          <div class="general-info__logo-socia">
+            <h2 class="footer__logo">na mu</h2>
+            <div class="general-info__socia-media">
+              <a href="#" class="general-info__facebook">
+                <img
+                  class="general-info__facebook-logo"
+                  src="images/Facebook.png"
+                  alt="Логотип фейсбуку"
+                >
+              </a>
+              <a href="#" class="general-info__instagram">
+                <img
+                  class="general-info__facebook-logo"
+                  src="images/Vector.svg"
+                  alt="Логотип інстаграму"
+                >
+              </a>
+            </div>
+          </div>
+          <div class="general-info__schedule">
+            <h5 class="general-info__header">Графік роботи</h5>
+            <ul class="general-info__list">
+              <li class="general-info__item">
+                <strong>12:00 - 20:00</strong>
+                понеділок
+              </li>
+              <li class="general-info__item">
+                <strong>12:00 - 20:00</strong>
+                вівторок
+              </li>
+              <li class="general-info__item">
+                <strong>12:00 - 20:00</strong>
+                середа
+              </li>
+              <li class="general-info__item">
+                <strong>12:00 - 20:00</strong>
+                четвер
+              </li>
+              <li class="general-info__item">
+                <strong>21:00 - 20:00</strong>
+                п'ятниця
+              </li>
+              <li class="general-info__item">
+                <strong>11:00 - 19:00</strong>
+                субота
+              </li>
+              <li class="general-info__item">
+                <strong>11:00 - 19:00</strong>
+                неділя
+              </li>
+            </ul>
+            <p class="general-info__discribe">
+              Вихідні понеділок, вівторок
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+          <div class="general-info__contacts">
+            <h5 class="general-info__header">Контакти:</h5>
+            <span class="general-info__adress">
+              вул. М. Грушевського, 6; Київ, 01001
+            </span>
+            <a href="tel:+38 (044) 278-13-57" class="general-info__link">
+              тел. +38 (044) 278-13-57
+            </a>
+            <a href="tel:+38 (044) 278-74-54" class="general-info__link">
+              факс +38 (044) 278-74-54
+            </a>
+            <a href="mailito:info@namu.kiev.ua" class="general-info__link">
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+        </div>
+        <nav class="footer-nav">
+          <ul class="footer-nav__list">
+            <li class="footer-nav__item"><a href="#gallery" class="footer-nav__link">Галерея</a></li>
+            <li class="footer-nav__item"><a href="#info" class="footer-nav__link">Про нас</a></li>
+            <li class="footer-nav__item"><a href="#event" class="footer-nav__link">Виставки та події</a></li>
+            <li class="footer-nav__item"><a href="#" class="footer-nav__link">Магазин</a></li>
+            <li class="footer-nav__item"><a href="#" class="footer-nav__link">Відвідування</a></li>
+            <li class="footer-nav__item"><a href="#" class="footer-nav__link">Блог</a></li>
+            <li class="footer-nav__item"><a href="#subbscription" class="footer-nav__link">Стати нашим другом</a></li>
+            <li class="footer-nav__item"><a href="#info" class="footer-nav__link">Контакти</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer__copyrigth">
+        <span>Copyright © 2019. All Rights Reserved.</span>
+        <span>Designed by Zhyriada Marina</span>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
